# syncread

./: .gitignore  Cargo.toml  README.md  debug_mpv.sh  flake.nix  justfile  test_compile.sh
.github/workflows/: build.yml
src/: main.rs
src/mpv/: controller.rs  keybinds.rs  mod.rs  playlist.rs
src/network/: mod.rs  protocol.rs  sync_client.rs  sync_server.rs
