[package]
name = "syncread"
version = "0.1.0"
edition = "2021"
description = "Synchronized media viewer using MPV"
license = "GPL-3.0"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization for MPV IPC and network protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI interface
clap = { version = "4.0", features = ["derive"] }

# Configuration
config = "0.14"

# Networking (choose one approach later)
# libp2p = "0.53"  # Uncomment when ready for P2P
# webrtc = "0.7"   # Alternative networking approach

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
# Faster compile times during development
opt-level = 0
debug = true

[profile.release]
# Optimized for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
